# kickstarter-forecasting

./: .dockerignore  .env.sample.yaml  .env.template  .gitignore  .python-version  Dockerfile  Makefile  README.md  comments.txt  docker-compose.yml  dockerfile  main.py  nlp_preprocessing.py  pyproject.toml  requirements.txt  test.html
.devcontainer/: devcontainer.json
apps/: API.py  main.py  streamlit.py  streamlit_app.py
attila/: cleaning.py  data.py  params.py
kickstarter_predictor/: data.py  params.py  predict.py  preprocess_ML.py  registry.py  scraper.py  train_test.py
kickstarter_predictor/preprocess/: nlp_preprocessing.py
models/: 20250610-101116_MultinomialNB_by_project.pkl
notebook/: Adrien_Jen_data_kickstarter.ipynb  test_translation.ipynb
par_projet/: merged_data_test.parquet
scripts/: translate_data.py
