[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kickstarter_predictor"
version = "0.0.1"
readme = "README.md"
requires-python=">=3.12.9"
description = "kickstartup_forecasting Model"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
